--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@ adsense: false
 </div>
 <div>
     <H3 class="indent">De Anza 위키에 오신걸 환영합니다</H3>
-    <p style="padding-left: 30px;">De Anza위키는 De Anza College에 처음 오신 한국인 유학생분들을 위한 위키 입니다.</p>
+    <p style="padding-left: 30px;">&nbsp;</p>
     <p style="padding-left: 30px;">처음 오시는 분들은 <a href="/wiki/how-to/">HOW to USE DE ANZA WIKI</a> 문서를 읽어보시기를 권합니다.</p>
+    <p style="padding-left: 30px;">&nbsp;</p>
     <p style="padding-left: 30px;">외부인의 반달리즘을 막기 위해서 본 위키의 내용을 수정하시려면 본인의 De Anza학교 이메일을 통하여&nbsp;<a href="mailto:20394509@fhdu.edu로">20394509@fhdu.edu로</a>&nbsp;Github contributor 추가 요청을 보내셔야합니다.</p>
+    <p style="padding-left: 30px;">&nbsp;</p>
+    <p style="padding-left: 30px;">검색 라이브러리의 성능 한계로 때때로 검색기능이 제대로 작동하지 않을때가 있을 수 있습니다. 그럴경우 결과화면에서 검색어를 지우고 검색창에 다시 검색어를 입력해보시길 바랍니다.</p>
     <p style="padding-left: 30px;">&nbsp;</p>
     <h4>
         <a href="/recent/">전체 문서 리스트 보기 ({{ site.wiki | size | minus: 1 }} 항목)</a>
